[project]
name = "clinical-trial-deviation-detector"
version = "1.0.0"
description = "OpenEnv clinical trial protocol deviation detector environment"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core"
]

[tool.openenv]
name = "clinical_trial"
version = "1.0.0"
path = "./"

[project.scripts]
server = "uvicorn:run"
